--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,17 @@
-body, nav, ul, li {
+body, nav, ul, li, h1, h2, h3, h4, h5 {
     margin: 0;
     padding: 0;
+    color: #bababa !important;
+    font-family: Arial, Helvetica, sans-serif !important;
 }
 
 body {
-    background-color: bisque;
+    background-color: #212121;
 }
 nav#nav-container {
-    background-color: #212121;
+    background-color: #323232;
     width: 100%;
-    height: 50px;
+    height: 40px;
     position: sticky;
     top: 0;
     margin: 0;
@@ -37,6 +39,20 @@ a.nav-link:visited {
 a.nav-link:hover, a.nav-link:focus {
     color: #5b5b5b;
 }
+h1 {
+    padding: 5px 0px;
+    font-size: xx-large;
+}
 section.content{
     padding-left: 10px;
+    margin: 0% 25%;
+}
+section.img {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-end;
+}
+img#cat-img {
+    height: 250px;
 }
