--- a/style.css
+++ b/style.css
@@ -3,34 +3,48 @@ body {
     color: #ddd;
     font-family: Arial, Helvetica, sans-serif;
 }
+main{
+    display:flex;
+    flex-direction: row;
+    gap: 2em;
+}
 h1 {
     text-align: center;
 }
-#quiz-form {
+h2 {
+    text-transform: capitalize;
+}
+ul.list {
     display: flex;
     flex-direction: column;
     align-items: center;
-    text-align: center;
     padding: 10px;
+    list-style: none;
 }
-#quiz-form .question {
-    border: 2px solid #434343;
-    padding-bottom: 20px;
-    margin: 10px;
-    width: 50%;
+ul.list li.btn {
+    text-transform: capitalize;
+    border: 2px solid #ddd;
+    box-shadow: 5px 5px 5px #434343;
+    padding: 1em;
+    margin: 1em;
+    max-width: 120px;
+
 }
-#quiz-form .question .option:hover {
-    color: #434343
+ul.list .btn:hover {
+    color: #434343;
+    border-color: #434343;
+    cursor: pointer;
 }
-#quiz-form .question .option input {
-    accent-color: #434343;
-}
-#results {
+.panel {
+    border:1px solid grey;
+    box-shadow: 5px 5px 5px #434343;
+    padding: 1em;
+    margin-top:2em;
+    align-self: flex-start;
     text-align: center;
 }
-#results .correct {
-    color: lime !important;
+.panel .abilities {
+    text-transform: capitalize;
+    text-align: justify;
 }
-#results .incorrect {
-    color: red !important;
-}
+
