--- a/style.css
+++ b/style.css
@@ -1,50 +1,48 @@
+/* || general styles */
+
+html {
+  font-family: 'helvetica neue', helvetica, arial, sans-serif;
+}
+
 body {
-    background-color: #232323;
-    color: #ddd;
-    font-family: Arial, Helvetica, sans-serif;
+  width: 800px;
+  margin: 0 auto;
 }
-main{
-    display:flex;
-    flex-direction: row;
-    gap: 2em;
+
+h1, h2 {
+  font-family: 'Faster One', cursive;
 }
+
+/* header styles */
+
 h1 {
-    text-align: center;
+  font-size: 4rem;
+  text-align: center;
 }
+
+header p {
+  font-size: 1.3rem;
+  font-weight: bold;
+  text-align: center;
+}
+
+/* section styles */
+
+section article {
+  width: 33%;
+  float: left;
+}
+
+section p {
+  margin: 5px 0;
+}
+
+section ul {
+  margin-top: 0;
+}
+
 h2 {
-    text-transform: capitalize;
+  font-size: 2.5rem;
+  letter-spacing: -5px;
+  margin-bottom: 10px;
 }
-ul.list {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 10px;
-    list-style: none;
-}
-ul.list li.btn {
-    text-transform: capitalize;
-    border: 2px solid #ddd;
-    box-shadow: 5px 5px 5px #434343;
-    padding: 1em;
-    margin: 1em;
-    max-width: 120px;
-
-}
-ul.list .btn:hover {
-    color: #434343;
-    border-color: #434343;
-    cursor: pointer;
-}
-.panel {
-    border:1px solid grey;
-    box-shadow: 5px 5px 5px #434343;
-    padding: 1em;
-    margin-top:2em;
-    align-self: flex-start;
-    text-align: center;
-}
-.panel .abilities {
-    text-transform: capitalize;
-    text-align: justify;
-}
-
